kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zip
spec:
  selector:
    app: zip
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: zip-nginx
spec:
  selector:
    app: zip
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
