kustomize/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-www
spec:
  redirectRegex:
    regex: ^https?://www.zainproti.si/(.*)
    replacement: https://zainproti.si/${1}
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: enable-cors
spec:
  headers:
    accessControlAllowOriginList:
      - "https://zainproti.si"
    accessControlAllowMethods:
      - GET
      - POST
      - PUT
      - DELETE
      - OPTIONS
    accessControlAllowHeaders:
      - "*"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zip
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.middlewares: |
      traefik-redirect-to-https@kubernetescrd,
      zip-redirect-www@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - zainproti.si
        - www.zainproti.si
      secretName: zip-tls
  rules:
    - host: zainproti.si
      http: &http_paths
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zip
                port:
                  number: 8000
    - host: www.zainproti.si
      http: *http_paths
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zip-nginx
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.middlewares: |
      zip-enable-cors@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - files.zainproti.si
      secretName: zip-nginx-tls
  rules:
    - host: files.zainproti.si
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zip-nginx
                port:
                  number: 80
